# chess

./: CMakeLists.txt  attack.cpp  bitboards.cpp  bitpattern.cpp  board.cpp  databoard.cpp  defs.h  evaluate.cpp  generatekey.cpp  init.cpp  io.cpp  main.cpp  makemove.cpp  misc.cpp  movegen.cpp  polybook.cpp  polykey.cpp  polykey.h  pvtable.cpp  readme.txt  search.cpp  uci.cpp  validate.cpp  xboard.cpp
